WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59042
REGRESSION (WK2): Animated GIF stops when navigating forward, back
https://bugs.webkit.org/show_bug.cgi?id=59042
Summary
REGRESSION (WK2): Animated GIF stops when navigating forward, back
Andy Estes
Reported
2011-04-20 17:02:04 PDT
* SUMMARY After loading this page and going forward, then back, the animated gif stops animating. * STEPS TO REPRODUCE 1. Load
http://en.wikipedia.org/wiki/Methadone
2. Click the animated gif 3. Hit the back button * RESULTS Gif no longer animates.
Attachments
Patch
(9.63 KB, patch)
2011-04-20 17:15 PDT
,
Andy Estes
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2011-04-20 17:02:23 PDT
<
rdar://problem/9228639
>
Andy Estes
Comment 2
2011-04-20 17:03:31 PDT
When loading the page from the b/f cache, document()->view()->isOffscreen() returns true in RenderObject::willRenderImage(), so BitmapImage::startAnimation() returns without actually kicking off the animation. In WebKit1, the ScrollView is a platform widget, so ScrollView::isOffscreen() calls [NSWindow isVisible]. In WebKit2, the ScrollView isn't a platform widget so it asks the WebCore Widget whether or not it is visible. It always returns false since setParentVisible(false) was called on the old ScrollView before navigating to a new page, but setParentVisible(true) is never called when restoring it from the back/forward cache.
Andy Estes
Comment 3
2011-04-20 17:06:14 PDT
It's sad that I'm fixing a WebKit2-specific bug that'll have to be skipped for now on the WebKit2 bots due to <
https://bugs.webkit.org/show_bug.cgi?id=42197
> :(
Andy Estes
Comment 4
2011-04-20 17:15:03 PDT
Created
attachment 90450
[details]
Patch
Maciej Stachowiak
Comment 5
2011-04-20 17:31:39 PDT
Comment on
attachment 90450
[details]
Patch r=me
Andy Estes
Comment 6
2011-04-20 17:46:49 PDT
Committed
r84443
: <
http://trac.webkit.org/changeset/84443
>
WebKit Review Bot
Comment 7
2011-04-20 18:37:05 PDT
http://trac.webkit.org/changeset/84443
might have broken Windows 7 Release (Tests) The following tests are not passing: fast/images/animated-gif-restored-from-bfcache.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug